--- a/assets/css/settings/type.css
+++ b/assets/css/settings/type.css
@@ -12,7 +12,7 @@ h2,
 
 h1,
 .t-h1 {
-  font-size: 2.5rem;
+  font-size: 3.6rem;
   line-height: calc(40 / 25);
   letter-spacing: 0.12rem;
 
@@ -25,7 +25,7 @@ h1,
 
 h2,
 .t-h2 {
-  font-size: 2rem;
+  font-size: 2.8rem;
   line-height: calc(30 / 20);
   letter-spacing: 0.12rem;
 
